Shenandoah: Fix JFR test failures

XMLWordPrintable

    • jfr
    • b04
    • generic
    • generic

      With the recent Shenandoah backport to jdk11u, we decided to optionally split metadata.xml so that Shenandoah can provide its own metadata-shenandoah.xml in a separate file. This avoids generating code for Shenandoah when Shenandoah is not present in the build.

      However, the metadata.xml is also read at run-time, but metadata-shenandoah.xml is not present at run-time, nor would it be read with the current implementation of MetadataHandler.java. This makes the test jdk/jfr/tool/TestPrintJSON.java fail.

            Assignee:
            Roman Kennke
            Reporter:
            Roman Kennke
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: