8251354: Shenandoah: Fix jdk/jfr/tool/TestPrintJSON.java test failure Reviewed-by: clanger, stuefe